removeFirst() isn't in List => use remove(0)